--- a/product_launch2.html
+++ b/product_launch2.html
@@ -206,11 +206,12 @@
         </h1>
 
         <div style="display: flex; align-items: center; gap: 1rem">
+          <label for="search-products" class="sr-only">Search products</label>
           <input
             type="search"
+            id="search-products"
             placeholder="Search products..."
             class="search-input"
-            title="Search input"
           />
 
           <<button
@@ -253,9 +254,12 @@
       <section id="product-spotlight" class="product-section">
         <div class="product-layout">
           <div>
-            <a href="#full-res" style="display: block; text-decoration: none">
+            <a
+              href="https://placehold.co/800x800/1e3a8a/f0f0f0?text=Product+BLUE+Full+Res"
+              target="_blank"
+              style="display: block; text-decoration: none"
+            >
               <img
-                id="product-image"
                 src="https://placehold.co/400x400/1e3a8a/f0f0f0?text=Product+BLUE"
                 alt="Blue image of the product"
                 style="
@@ -371,11 +375,17 @@
                 padding-top: 1rem;
               "
             >
-              <label for="config-id">Hidden Configuration ID:</label>
-              <input type="hidden" id="config-id" value="ZXU221" />
+              <label for="config-id" class="sr-only">Configuration ID</label>
+              <input
+                type="hidden"
+                id="config-id"
+                name="config-id"
+                placeholder="Enter configuration ID"
+                value="ZXU221"
+              />
             </div>
             <label for="size-select">Select Size</label>
-            <select id="size-select" class="input-style">
+            <select id="size-select" class="input-style" aria-required="true">
               <option value="">-- Select Size --</option>
               <option value="42mm">42mm (Standard)</option>
               <option value="46mm">46mm (Large)</option>
@@ -426,7 +436,7 @@
               id="buy-now-btn"
               class="low-contrast-button"
               onclick="addToCart()"
-              accesskey="b"
+              aria-label="Add to Cart"
               role="button"
               tabindex="0"
               style="color: #ffffff"
@@ -512,9 +522,9 @@
         </h3>
 
         <div class="review-divider">
-          <h6 style="font-size: 1.125rem; font-weight: 500">
+          <h4 style="font-size: 1.125rem; font-weight: 500">
             "Best Smartwatch on the market."
-          </h6>
+          </h4>
 
           <p style="font-size: 0.875rem; color: #4b5563; margin-top: 4px">
             I found the battery life to be incredibly
@@ -533,9 +543,9 @@
         </div>
 
         <div class="review-divider">
-          <h6 style="font-size: 1.125rem; font-weight: 500">
+          <h5 style="font-size: 1.125rem; font-weight: 500">
             "A solid upgrade."
-          </h6>
+          </h5>
           <p style="font-size: 0.875rem; color: #4b5563; margin-top: 4px">
             Worth the money if you're looking for advanced fitness tracking
             capabilities.
@@ -682,7 +692,8 @@
         </style>
 
         <a
-          href="#search"
+          href="#"
+          onclick="document.getElementById('search-input').focus(); return false;"
           aria-label="Go to search section"
           style="
             margin-left: 1rem;
@@ -693,6 +704,8 @@
           "
         >
         </a>
+
+        <input id="search-input" type="text" placeholder="Search..." />
 
         <p style="font-size: 0.875rem; font-weight: 600; margin-right: 1rem">
           &#128717; Free 30-Day Returns.
